syntax = "proto3";

option go_package = "github.com/cuemby/ccp-sdk/gen/go/accounts/v1alpha1/organizations";
import "accounts/v1alpha1/accounts.proto";
package accounts.v1alpha1.organizations.v1;


/*
    ORGANIZATIONS
*/

/*
Requests
*/
message CreateOrganizationRequest {
    string name = 1;
    string image = 2;
    string user_id = 3;
    string description = 4;
}

message ListOrganizationRequest {
}

message GetOneOrganizationRequest {
    string organization_id = 2;
}

message UpdateOrganizationRequest {
    string name = 2;
    string description = 3;
    string image = 4;
    string organization_id=5;
}


message DeleteOrganizationRequest {
    string organization_id = 2;
}




/*
    Responses
*/


message GetOneOrganizationResponse{
    string name = 2;
    string image = 3;
    repeated ProjectOrganization projects = 4;
    repeated Member members = 5;
    string description = 6;
    UserList owner = 7;
    string slug = 9;
    string id = 10;

}


message ListOrganizationResponse {
    repeated Organization organizations = 1;
}

message CreateOrganizationResponse {
    string msg = 1;
    string role_id_organization = 6;
    string id = 5;

}

message UpdateOrganizationResponse {
    string msg = 1;
}

message DeleteOrganizationResponse {
    string msg = 1;
}


message Member {
    string user_id = 2;
    string first_name = 3;
    string last_name = 4;
    bool is_active = 5;
    repeated MemberRol roles = 6;
    string image = 7;
    uint32 id = 8;
}

//Project Organization
message ProjectOrganization {
    string name = 2;
    string image = 3;
    string description = 4;
    string id =5;
}

